--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cloudinary": "^1.19.0",
     "dotenv": "^8.2.0",
     "handlebars": "^4.7.3",
+    "lodash": "^4.17.15",
     "mais-mongoose-seeder": "^1.0.7",
     "mongoose": "^5.9.2"
   },
