--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "cloudinary": "^1.19.0",
     "dotenv": "^8.2.0",
     "handlebars": "^4.7.3",
+    "hapi-auth-jwt2": "^10.1.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mais-mongoose-seeder": "^1.0.7",
-    "mongoose": "^5.9.2"
+    "mongoose": "^5.9.2",
+    "npm-check-updates": "^6.0.1"
   },
   "engines": {
     "node": "^12.0.0"
