--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "handlebars": "^4.7.3",
     "hapi-auth-jwt2": "^10.1.0",
     "jsonwebtoken": "^8.5.1",
+    "leaflet": "^1.6.0",
     "lodash": "^4.17.15",
     "mais-mongoose-seeder": "^1.0.7",
     "mongoose": "^5.9.2",
